Fix Collapse/Expand & View/Edit: chevron color
- Fix collapse-expand-section and view-edit-section components chevron color.

--- a/src/clr-addons/view-edit-section/view-edit-section.scss
+++ b/src/clr-addons/view-edit-section/view-edit-section.scss
@@ -37,8 +37,12 @@
     }
   }
 
-  .ces-caret-icon {
-    color: var(--clr-icon-color);
+  .btn.btn-link.ces-caret-btn {
+    color: var(--cds-alias-typography-color-300);
+
+    cds-icon.ces-caret-icon {
+      color: var(--cds-alias-typography-color-300);
+    }
   }
 
   .ves-action,
